fix : z-index

--- a/20220823/나이키동영상/css/888.css
+++ b/20220823/나이키동영상/css/888.css
@@ -64,6 +64,7 @@ header {
   position: absolute;
   right: 0;
   top: 150px;
+  z-index: 10;
 }
 
 #gnb > li {
